--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "routes-typescript",
   "description": "Minimalist route matching for javascript/typescript.",
   "version": "2.1.0",
@@ -8,18 +9,30 @@
     "Roy Hansen <roy@royhansen.no> (https://github.com/royhansen99)"
   ],
   "license": "MIT",
-  "main": "dist/routes",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "directories": {
     "lib": "."
   },
   "scripts": {
-    "test": "make test",
-    "prepublish": "mkdir -p dist/ && browserify --require ./index --standalone routes > dist/routes.js"
-  },
-  "engines": {
-    "node": "*"
+    "build": "vite build",
+    "lint": "eslint './src/**/*.{js,ts}' './test/**/*.{js,ts}'",
+    "prettier": "prettier --check './src' './test'",
+    "prettier:write": "prettier --write './src' './test'",
+    "tsc": "tsc  --noEmit",
+    "test": "make test"
   },
   "devDependencies": {
-    "browserify": "^3.30.4"
+    "eslint": "^9.12.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.9.0",
+    "vite": "^5.4.9",
+    "vite-plugin-static-copy": "^3.0.0",
+    "vitest": "^2.1.3"
   }
 }
