--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "name": "routes-typescript",
   "description": "Minimalist route matching for javascript/typescript.",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "repository": "github:royhansen99/routes-typescript",
   "bugs": "https://github.com/royhansen99/routes-typescript/issues",
   "authors": [
@@ -12,6 +12,11 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    "types": "dist/index.d.ts",
+    "import": "dist/index.es.js",
+    "require": "dist/index.cjs.js"
+  },
   "files": [
     "dist"
   ],
