--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "name": "routes-typescript",
   "description": "Minimalist route matching for javascript/typescript.",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "repository": "github:royhansen99/routes-typescript",
   "bugs": "https://github.com/royhansen99/routes-typescript/issues",
   "authors": [
@@ -13,15 +13,16 @@
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "exports": {
-    "types": "dist/index.d.ts",
-    "import": "dist/index.es.js",
-    "require": "dist/index.cjs.js"
-  },
-  "files": [
-    "dist"
-  ],
-  "directories": {
-    "lib": "."
+    "./package.json": "./package.json",
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.es.js"
+      },
+      "require": {
+        "default": "./dist/index.cjs.js"
+      }
+    }
   },
   "scripts": {
     "build": "vite build",
